# CS3460

./: .gitignore  Notes.txt  README.md
Assignment 1 - Nbonacci Numbers/Assignment 1 - Nbonacci Numbers/: Assignment 1 - Nbonacci Numbers.cpp
Assignment 2 - Random Distributions/: Assignment2.cpp  CMakeLists.txt
Assignment 3 - Google Test/: CMakeLists.txt  CMakeLists.txt.in  TestDistributions.cpp  distributions.cpp  distributions.hpp  main.cpp
Assignment 4 - Array Performance/: CMakeLists.txt  TestPerformance.cpp  main.cpp  sortutils.cpp  sortutils.hpp
Assignment 5 - Type Ahead/: CMakeLists.txt  WordTree.cpp  WordTree.hpp  main.cpp
Assignment 6 - Conways Game of Life/: CMakeLists.txt  LifeSimulator.cpp  LifeSimulator.hpp  Pattern.hpp  PatternAcorn.cpp  PatternAcorn.hpp  PatternBlinker.cpp  PatternBlinker.hpp  PatternBlock.cpp  PatternBlock.hpp  PatternGlider.cpp  PatternGlider.hpp  PatternGosperGliderGun.cpp  PatternGosperGliderGun.hpp  RenderConsole.cpp  RenderConsole.hpp  main.cpp
Assignment 7 - Weights/: CMakeLists.txt  weight.hpp
Assignment 8 - Smart Pointers/: CMakeLists.txt  main.cpp  shared_ptr.hpp  unique_ptr.hpp
Assignment 9 - Dynamic Priority Queue/: CMakeLists.txt  TestPriorityQueue.cpp  main.cpp  priority_queue.hpp
CMakeHelloWorld/: CMakeLists.txt
Final/: CMakeLists.txt  unique_ptr.hpp
Maze/Maze/: Cell.cpp  Cell.h  Maze.cpp  Maze.h  Source.cpp
Testing stuff/Testing stuff/: main.cpp
